<resources>
    <string name="app_name">ФК Дедиње БГД</string>

    <string name="network_error">Неуспело повезивање на интернет, проверити доступност мреже</string>

    <string name="btn_home">О клубу</string>
    <string name="btn_management">Управа</string>
    <string name="btn_squad">Тим</string>
    <string name="btn_fixtures">Распоред</string>
    <string name="btn_standings">Табела</string>
    <string name="btn_livescore">LiveScore</string>
    <string name="btn_news">Обавештења</string>
    <string name="title_activity_management">Управа и стручни штаб</string>
    <string name="title_activity_squad">Тим</string>
    <string name="title_activity_fixtures">Распоред и резултати</string>
    <string name="title_activity_standings">Табела</string>
    <string name="title_activity_home">О клубу</string>
    <string name="title_activity_live_score">Уживо праћење резултата</string>
    <string name="title_activity_next_match">Следећа утакмица</string>
    <string name="title_activity_news">Обавештења</string>

    <string name="prompt_sound">Звук за гол   </string>
    <string name="prompt_stadion">Стадион</string>
    <string name="prompt_sezona">сезона</string>
    <string name="prompt_datum_osnivanja">Датум оснивања:</string>
    <string name="prompt_adresa">Адреса:</string>
    <string name="prompt_mesto">Место:</string>
    <string name="prompt_pib">ПИБ"</string>
    <string name="prompt_matbroj">Мат.број:</string>
    <string name="prompt_email">Email:</string>
    <string name="prompt_web">Web:</string>
    <string name="prompt_tekrac">Текући рачун:</string>
    <string name="prompt_newsheader">Вести</string>

    <string name="btn_events">ток утакмице</string>
    <string name="btn_lineup">састав</string>
    <string name="title_activity_maps">Map</string>

    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_banner_onlistviews">ca-app-pub-8245954692474486/8241201853</string>
    <string name="admob_banner_onfixtures">ca-app-pub-8245954692474486/5287735459</string>
    <string name="admob_banner_onstandings">ca-app-pub-8245954692474486/6764468658</string>

</resources>
